# MaterialEnhancer

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
src/constants/: __init__.py  aliasing.py  app.py  save.py  upscale.py
src/editor/: __init__.py
src/editor/aliasing/: __init__.py  datasets.py  model.py
src/editor/aliasing/utils/: __init__.py  evaluate.py  load_weight.py  training.py
src/editor/save/: __init__.py  save_mov.py  save_png.py
src/editor/upscale/: __init__.py
src/editor/upscale/utils/: __init__.py  upscale.py
